Updated "Team" section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="w3-center">We are always looking for new team members with any level of skill, if you are interested don't hesitate to contact us!</p>
     <div class="w3-content w3-container">
       <h3 class="w3-center ptop">THE TEAM</h3>
-      <p class="w3-center"><em>The team members that make Scr:pta what it is!</em></p><br>
+      <p class="w3-center"><em>The team members that make Scr:pta what it is!<br>(Click on a team member to learn more)</em></p><br>
       <div class="w3-row w3-center">
         <div class="w3-third">
           <a target="_blank" href="https://joshsawyer.uk"><img src="m/josh.jpg" alt="Josh" style="width:45%" class="w3-circle w3-hover-opacity"></a>
