Changed page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Scr:pta</title>
+    <title>Scripta</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Welcome! Scr:pta (Scripta) is a small UK-based group of programmers, designers and artists founded in 2019.">
