Changed back to welcome

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="w3-content w3-container">
       <h3 class="w3-center ptop">ABOUT SCR:PTA</h3>
       <p class="w3-center"><em>Teamwork is everything</em></p>
-      <p class="w3-center">Howdey! Scr:pta (Scripta) is a small UK-based group of programmers, designers and artists founded in 2019.</p>
+      <p class="w3-center">Welcome! Scr:pta (Scripta) is a small UK-based group of programmers, designers and artists founded in 2019.</p>
       <p class="w3-center">We are always looking for new team members with any level of skill, if you are interested don't hesitate to contact us!</p>
     <div class="w3-content w3-container">
       <h3 class="w3-center ptop">THE TEAM</h3>
